Corregido el XML de DetalleAlumno y corregido query param año

--- a/.settings/org.mulesoft.exportwizardsettings.prefs
+++ b/.settings/org.mulesoft.exportwizardsettings.prefs
@@ -1,2 +1,3 @@
 1734086559336=C\:\\Users\\Administrador.WIN-2O4P6U7CI32\\Desktop\\entrega2prov
+1734280608370=C\:\\Users\\Administrador.WIN-2O4P6U7CI32\\Desktop\\Entrega-IAP-2
 eclipse.preferences.version=1
